--- a/PL/Views/MateriaController1/GetAll.cshtml
+++ b/PL/Views/MateriaController1/GetAll.cshtml
@@ -22,7 +22,7 @@
  {
 <div class="row">
     <div class ="col-md-3">
-         @Html.DropDownListFor(model => model.Semestre.IdSemestre, new SelectList(Model.Semestre.Semestres, "IdSemestre", "Nombre"), "Selecciona un semestre", new { @class = "form-control bg-light text-dark" })
+         @Html.DropDownListFor(model => model.Semestre.IdSemestre, new SelectList(Model.Semestre.Semestres, "IdSemestre", "Nombre"), "Seleccione un semestre", new { @class = "form-control bg-light text-dark" })
     </div> 
     <div class ="col-md-3">
          @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control bg-light text-dark", placeholder = "Nombre" })
@@ -54,7 +54,7 @@
         @foreach (ML.Materia materia in Model.Materias)
         {
         <tr>
-            <td><a class="btn btn-warning glyphicon glyphicon-edit" href="@Url.Action("Form", "MateriaController1", new { IdMateria = materia.IdMateria })"></a></td>
+            <td style ="text-align: center; vertical-align: middle;"><a class="btn btn-warning glyphicon" href="@Url.Action("Form", "MateriaController1", new { IdMateria = materia.IdMateria })"><i class="bi bi-pencil-square" style="color: ivory"></i></a></td>
             <td style ="display :none;">@materia.IdMateria </td>
             <td>@materia.Nombre</td>
             <td>@materia.Creditos</td>
@@ -80,7 +80,7 @@
                  }                       
              </td>
 
-            <td><a class="btn btn-danger glyphicon glyphicon-trash" href="@Url.Action("Delete", "MateriaController1", new { IdMateria= materia.IdMateria})" onclick="return confirm('Estas seguro que deseas eliminar este registro?');"></a></td>
+            <td style ="text-align: center; vertical-align: middle;"><a class="btn btn-danger glyphicon glyphicon-trash" href="@Url.Action("Delete", "MateriaController1", new { IdMateria= materia.IdMateria})" onclick="return confirm('Estas seguro que deseas eliminar este registro?');"><i class="bi bi-eraser-fill" style="color: mintcream"></i></a></td>
         </tr>
         }
 
