--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -21,16 +21,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MateriaController1" asp-action="GetAll">Materia</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CargaMasiva" asp-action="MateriaCargaMasiva">Carga Materia</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="VentaMateria" asp-action="GetAll">Venta Materia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark " asp-area="" asp-controller="VentaMateria" asp-action="Cart"><i class="bi bi-bag-fill" style="color: goldenrod;">(1)</i></a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
