--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="VentaMateria" asp-action="GetAll">Venta Materia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark " asp-area="" asp-controller="VentaMateria" asp-action="Cart"><i class="bi bi-bag-fill" style="color: goldenrod;">(1)</i></a>
+                            <a class="nav-link text-dark " asp-area="" asp-controller="VentaMateria" asp-action="ResumenCompra"><i class="bi bi-bag-fill" style="color: goldenrod;">(3)</i></a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
