--- a/PL/Views/MateriaController1/Modal.cshtml
+++ b/PL/Views/MateriaController1/Modal.cshtml
@@ -4,26 +4,21 @@
 <script src="http://bootboxjs.com/bootbox.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-<div class="modal" tabindex="-1" role="dialog" id="Modal">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Aviso</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <h5>@ViewBag.Message</h5>
-            </div>
-            <div class="modal-footer">
-                @*@Html.ActionLink("Regresar", "GetAll", "Materia", htmlAttributes: new { @class = "btn btn-danger" })*@
-                @Html.ActionLink("Vale", "GetAll", "MateriaController1", htmlAttributes: new { @class = "btn btn-danger" })
-
-
-            </div>
-        </div>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Aviso</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <h5>@ViewBag.Message</h5>
+      </div>
+      <div class="modal-footer">
+          @Html.ActionLink("Vale", "GetAll", "VentaMateria", htmlAttributes: new { @class = "btn btn-danger" })
+      </div>
     </div>
+  </div>
 </div>
 
 <script>
